<resources>
    <string name="app_name">TodoListApp</string>
    <string name="title_placeholder">THIS IS TITLE OF THE BOOK</string>
    <string name="author_placeholder">THIS IS AUTHOR NAME</string>
    <string name="error">Whoops! Something Went Wrong</string>
    <string name="retry">Retry</string>
    <string name="empty">No Result Found</string>
    <string name="cover_url">Cover URL</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="year">Year</string>
    <string name="category">Category</string>
    <string name="submit">Submit</string>
    <string name="empty_field">Please fill this field</string>
    <string name="valid_year">Please input the year between 1800 and %s</string>
    <string name="valid_image_url">Please input PNG, JPG, or JPEG image url</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="reload">Reload</string>
    <string name="show_data">: %s</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="delete_book">Delete Book?</string>
    <string name="delete_confirm">Are you sure want to delete this book?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>