<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shimmer_auto_start="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_cover1"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:importantForAccessibility="no"
                android:src="@color/dark_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/detail1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="64dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_cover1">

                <TextView
                    android:id="@+id/tv_title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/dark_grey"
                    android:text="@string/title"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_author1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/dark_grey"
                    android:text="@string/author"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/tv_title1"
                    app:layout_constraintTop_toBottomOf="@id/tv_title1" />

                <TextView
                    android:id="@+id/tv_year1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/dark_grey"
                    android:text="@string/year"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/tv_author1"
                    app:layout_constraintTop_toBottomOf="@id/tv_author1" />

                <TextView
                    android:id="@+id/tv_category1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:background="@color/dark_grey"
                    android:text="@string/category"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/tv_year1"
                    app:layout_constraintTop_toBottomOf="@id/tv_year1" />

                <TextView
                    android:id="@+id/tv_data_title1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:background="@color/dark_grey"
                    android:ellipsize="end"
                    android:maxLines="2"
                    app:layout_constraintBottom_toBottomOf="@id/tv_title1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_category1"
                    app:layout_constraintTop_toTopOf="@id/tv_title1"
                    android:text="@string/title" />

                <TextView
                    android:id="@+id/tv_data_author1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/dark_grey"
                    app:layout_constraintBottom_toBottomOf="@id/tv_author1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_data_title1"
                    app:layout_constraintTop_toTopOf="@id/tv_author1"
                    android:text="@string/author" />

                <TextView
                    android:id="@+id/tv_data_year1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/dark_grey"
                    app:layout_constraintBottom_toBottomOf="@id/tv_year1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_data_author1"
                    app:layout_constraintTop_toTopOf="@id/tv_year1"
                    android:text="@string/year" />

                <TextView
                    android:id="@+id/tv_data_category1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/dark_grey"
                    app:layout_constraintBottom_toBottomOf="@id/tv_category1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_data_year1"
                    app:layout_constraintTop_toTopOf="@id/tv_category1"
                    android:text="@string/category" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/btn_update1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp"
                android:background="@color/dark_grey"
                android:text="@string/update"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail1" />

            <TextView
                android:id="@+id/btn_delete1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="16dp"
                android:background="@color/dark_grey"
                android:text="@string/delete"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_update1" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>